2004-11-16  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface.c network-iface-ethernet.c: implemented (get_xml)

2004-11-15  Carlos Garnacho Parro  <carlosg@gnome.org>

	* connection.c (wireless_essid_get_model),
	(wireless_dialog_prepare_essid_entry): added networks scanning
	feature

	* gst-network-tool.[ch]: added icon theme

2004-11-10  Carlos Garnacho Parro  <carlosg@gnome.org>

	* address-list.[ch], main.c, transfer.[ch]: made it begin to save
	information

2004-11-09  Carlos Garnacho Parro  <carlosg@gnome.org>

	* ifaces-list.[ch], transfer.c: update the gatewaydev from the XML

2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* network-iface-wireless.[ch] (gst_iface_wireless_new_from_xml):
	get the parent class configuration before checking that it's
	configured

2004-11-08  Carlos Garnacho Parro  <carlosg@gnome.org>

	* address-list.[ch], gst-network-tool.[ch], ifaces-list.[ch],
	network-iface.[ch], network-iface-ethernet.[ch],
	network-iface-irlan.[ch], network-iface-plip.[ch],
	network-iface-wireless.[ch]: Added files for the new network tool

	* callbacks.[ch], connection.[ch], main.c, transfer.[ch], Makefile.am: 
	Modified files for the new network tool

	* dns.[ch], hosts.[ch], network-druid.[ch], profile.[ch],
	profiles-table.[ch]: deleted files, any missing functionality will be
	reimplemented

2004-11-03  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.1

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* connection.[ch], main.c, network-druid.c, profile.c: Patch by
	Vincent Untz <vincent@vuntz.net> to add WEP keys management
        to the UI. Fixes #147260

2004-10-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* callbacks.c: changed the string to delete an interface, fixes
	#154830

2004-09-13  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 1.0

2004-09-01  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Release 0.92

2004-08-20  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.91.0
